--- a/HTML_CSS/Page_Produit_e_commerce/pageprincipale.html
+++ b/HTML_CSS/Page_Produit_e_commerce/pageprincipale.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href=""><h2>Dark Sasuke</h2></a>
+            <a href=""><h2>PC Gaming</h2></a>
             <ul id="ul1">
                 <li><a href="" class="hover">Accueil</a></li>
                 <li><a href="" class="hover">Présentation</a></li>
@@ -26,8 +26,7 @@
             <ul>
                 <li>Processeur AMD Ryzen™ 9 6900HX (8 cœurs/16 threads, cache de 20 Mo, boost jusqu'à 4,9 GHz max.) avec carte graphique Radeon™ 680M</li>
                 <li>Windows 11 Home</li>
-                <li>Écran QHD 165 Hz de 14 pouces, 2560 x 1440
-                AMD FreeSync™ Premium, Jusqu’à 100 % DCI-P3, Calibré en usine individuellement</li>
+                <li>Écran QHD 165 Hz de 14 pouces, 2560 x 1440 AMD FreeSync™ Premium, Jusqu’à 100 % DCI-P3, Calibré en usine individuellement</li>
                 <li>NVIDIA® GeForce RTX™ 3080 Ti (16 Go GDDR6 VRAM)</li>
                 <li>1 To SSD (M.2 NVMe PCIe 4.0 x4)</li>
                 <li>16 Go DDR5 - 4800 MHz (fixe sur la carte)</li>
@@ -46,8 +45,8 @@
     </main>
     <div id="entreMainEtFooter">
         <div id="div1">    
-            <p id="p1">Nouveau Dark Sasuke disponible !</p>    
-            <h1>Le tout nouveau <br> Dark Sasuke V2</h1>
+            <p id="p1">Nouveau Dark PC disponible !</p>    
+            <h1>Le tout nouveau <br> PC Gamer</h1>
             <p id="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, dolorum. Facilis, similique minima adipisci magnam voluptas id quis nesciunt possimus officia tenetur. Provident, tempora laboriosam deux trois quatre cinq six sept huit neuf dix onze douze treize mots.</p>
             <a href="" class="btn"><button>Voir spécifications</button></a>
         </div>
@@ -64,7 +63,7 @@
                 <a href=""><p>Offres du moment</p></a>
             </div>
             <div>
-                <h3>Dark Sasuke</h3>
+                <h3>PC Gaming</h3>
                 <a href=""><p>À propos</p></a>
                 <a href=""><p>Recrutement</p></a>
                 <a href=""><p>Nos garanties</p></a>
