Projet e commerce mis à jour

--- a/HTML_CSS/Page_Produit_e_commerce/pageprincipale.html
+++ b/HTML_CSS/Page_Produit_e_commerce/pageprincipale.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css_pagepricipale.css">
     <script src="js_pageprincipale.js" defer></script>
-    <link rel="icon" href="./images/ds.jpg">
-    <title>Dark Sasuke</title>
+    <link rel="icon" href="./images/pcgamer.png">
+    <title>PC Gaming</title>
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
             </ul>
             <a href="" class="btn"><button>Ajouter au panier</button></a>
             <div id="images">                
-                <img src="./images/darsasuke2.png" alt="" class="imgProduit" id="imgProduit1">
+                <img src="./images/pcgamer4.png" alt="" id="imgProduit1">
                 <img src="./images/darksasuke1.png" alt="" class="imgProduit" id="imgProduit2">
                 <img src="./images/darksasuke3.png" alt="" class="imgProduit" id="imgProduit3">
             </div>
